# aadc2018

./: .gitignore  .gitmodules  AADCConfig.cmake  AADCConfigVersion.cmake  AADC_PRIVATE.cmake  CHANGELOG.txt  LICENSE.txt  README.md  Readme.txt  build_base.sh  build_base_win.bat  build_demo.sh  build_demo_win.bat  build_user.sh  build_user_release.sh  build_user_win.bat  changelog.txt  clean_build_user.sh  cmake_windows.bat
doc/doxygen/: CMakeLists.txt  doxygen.cfg  hhc.cmake
src/aadcBase/: CMakeLists.txt  Readme_before_change_anything.txt
src/aadcBase/arduino/: ArduinoBase.cpp  ArduinoBase.h  CMakeLists.txt  readme.dox
src/aadcBase/jury/: CMakeLists.txt
src/aadcBase/position/: CMakeLists.txt
src/aadcDemo/: CMakeLists.txt
src/aadcDemo/algorithms/: CMakeLists.txt
src/aadcDemo/datafilter/: CMakeLists.txt  Readme.txt
src/aadcDemo/helper/: CMakeLists.txt
src/aadcDemo/jury/: CMakeLists.txt
src/aadcDemo/markers/: CMakeLists.txt
src/aadcDemo/sensor/: CMakeLists.txt
src/aadcUser/: .cproject  .project  CMakeLists.txt  copyTemplateProject.py  copyTemplateProject_readme.txt
src/aadcUser/.externalToolBuilders/: New_Builder.launch
src/aadcUser/BirdsEyeView/: BirdsEyeView.cpp  BirdsEyeView.h  CMakeLists.txt
src/aadcUser/ClassifyPedestrian/: CMakeLists.txt  ClassifyPedestrian.cpp  ClassifyPedestrian.h
src/aadcUser/FineLocalisation/: CMakeLists.txt  FineLocalisation.cpp  FineLocalisation.h  FineLocator.cpp  FineLocator.h  PixelMetricTransformer.cpp  PixelMetricTransformer.h  stdafx.h
src/aadcUser/LITD_ArduinoDump/: CMakeLists.txt  LITD_ArduinoDump.cpp  LITD_ArduinoDump.h
src/aadcUser/LITD_BirdsEyeView/: BirdsEyeView.cpp  CMakeLists.txt
src/aadcUser/LITD_ClassifyPedestrian/: CMakeLists.txt  ClassifyPedestrian.cpp  ClassifyPedestrian.h
src/aadcUser/LITD_EmergencyBreak/: CMakeLists.txt  LITD_EmergencyBreak.cpp  LITD_EmergencyBreak.h
src/aadcUser/LITD_EncoderVelocity/: CMakeLists.txt  EncoderVelocity.cpp  EncoderVelocity.h  LITD_EncoderVelocity.cpp  LITD_EncoderVelocity.h
src/aadcUser/LITD_FFT/: CMakeLists.txt  FFTFilter.cpp  FFTFilter.h  stdafx.h
src/aadcUser/LITD_FineLocalization/: CMakeLists.txt  FineLocalisation.cpp  FineLocalisation.h  FineLocator.cpp  FineLocator.h  PixelMetricTransformer.h  stdafx.h
src/aadcUser/LITD_FollowMe/: CMakeLists.txt  LITD_FollowMe.cpp  LITD_FollowMe.h
src/aadcUser/LITD_IMULocalization/: CMakeLists.txt  LITD_IMULocalization.cpp  LITD_IMULocalization.h
src/aadcUser/LITD_JuryFileCopy/: CMakeLists.txt  LITD_JuryFileCopy.cpp  LITD_JuryFileCopy.h  stdafx.h
src/aadcUser/LITD_KeyboardControl/: CMakeLists.txt  LITD_KeyboardControlFilter.cpp  LITD_KeyboardControlFilter.h  LITD_KeyboardControlWidget.cpp  LITD_KeyboardControlWidget.h  litd_keyboard_control.ui  stdafx.h
src/aadcUser/LITD_LaneGenerator/: CMakeLists.txt  LITD_ControlTest.cpp  LITD_LaneGenerator.cpp  LITD_LaneGenerator.h  LITD_Map.cpp  LITD_Map.h  LITD_MapElement.h  LITD_MapElementCrossing.cpp  LITD_MapElementCrossing.h  LITD_MapElementCurve.cpp  LITD_MapElementCurve.h  LITD_MapElementDoubleCurve.cpp  LITD_MapElementDoubleStraight.cpp  LITD_MapElementParkingSpot.cpp  LITD_MapElementParkingSpot.h  LITD_MapElementStraight.cpp  LITD_MapElementStraight.h  LITD_VirtualPoint.cpp  LITD_VirtualPoint.h  math_utilities.h  stdafx.h
src/aadcUser/LITD_MatrixFollower/: CMakeLists.txt  FineLocator.cpp  FineLocator.h  MatrixFollower.cpp  MatrixFollower.h  stdafx.h
src/aadcUser/LITD_ObjectDetection/: CMakeLists.txt  LITD_ObjectDetection.cpp  LITD_ObjectDetection.h  YOLOHandler.cpp  YOLOHandler.h  stdafx.h
src/aadcUser/LITD_PositionMux/: CMakeLists.txt  LITD_PositionMux.cpp  LITD_PositionMux.h
src/aadcUser/LITD_Safety_Speed_Limit/: CMakeLists.txt  LITD_Safety_Speed_Limit.cpp  LITD_Safety_Speed_Limit.h
src/aadcUser/LITD_SpeedExtractor/: CMakeLists.txt  LITD_SpeedExtractor.cpp  LITD_SpeedExtractor.h
src/aadcUser/LITD_SpeedInjector/: CMakeLists.txt  LITD_SpeedInjector.cpp  LITD_SpeedInjector.h  stdafx.h
src/aadcUser/LITD_SpeedLimit/: CMakeLists.txt  LITD_SpeedLimit.cpp  LITD_SpeedLimit.h
src/aadcUser/LITD_StanleyControl/: CMakeLists.txt  LITD_MapElementCurve.h  LITD_MapElementDoubleCurve.h  LITD_MapElementDoubleStraight.h  LITD_StanleyControl.cpp  LITD_StanleyControl.h  LITD_TrajectoryList.cpp  LITD_TrajectoryList.h  LITD_VirtualPoint.cpp  LITD_VirtualPoint.h  math_utilities.h  stdafx.h
src/aadcUser/LITD_TestMatrixFollower/: CMakeLists.txt  FineLocator.cpp  FineLocator.h  LITD_TestMatrixFollower.cpp  LITD_TestMatrixFollower.h  stdafx.h
src/aadcUser/LITD_WheelSpeedController/: CMakeLists.txt  LITD_WheelSpeedController.cpp  LITD_WheelSpeedController.h  stdafx.h
src/aadcUser/LITD_ZMQ_AlarmClf/: CMakeLists.txt  ZmqAlarmClf.cpp  ZmqAlarmClf.h
src/aadcUser/LITD_ZMQ_Decision/: CMakeLists.txt  ZmqDecision.cpp  ZmqDecision.h
src/aadcUser/LITD_ZMQ_Decision_Jury/: CMakeLists.txt  ZmqDecisionJury.cpp  ZmqDecisionJury.h
src/aadcUser/LITD_ZMQ_Decision_Sensors/: CMakeLists.txt  ZmqDecisionSensors.cpp  ZmqDecisionSensors.h
src/aadcUser/LITD_ZMQ_Decision_Vision/: CMakeLists.txt  ZmqDecisionVision.cpp  ZmqDecisionVision.h
src/aadcUser/LITD_ZMQ_ImageTemplate/: CMakeLists.txt  ZmqImageTemplate.h
src/aadcUser/LITD_ZMQ_LidarBreak/: CMakeLists.txt  ZmqLidarBreak.cpp  ZmqLidarBreak.h
src/aadcUser/LITD_ZMQ_ObstInArea/: CMakeLists.txt  ZmqObstInArea.cpp  ZmqObstInArea.h
src/aadcUser/LITD_ZMQ_SensorTemplate/: CMakeLists.txt  ZmqSensorTemplate.cpp  ZmqSensorTemplate.h
src/aadcUser/LITD_ZMQ_Template/: CMakeLists.txt  ZmqTemplate.cpp  ZmqTemplate.h  stdafx.h
src/aadcUser/LITD_ZMQ_YoloTemplate/: CMakeLists.txt  ZmqYoloTemplate.h
src/aadcUser/LIT_CarController/: CMakeLists.txt  LIT_CarControllerFilter.cpp  LIT_CarControllerFilter.h  LIT_CarControllerWidget.cpp  LIT_CarControllerWidget.h  LIT_car_controller.ui  stdafx.h
src/aadcUser/LIT_KeyboardRemote/: CMakeLists.txt  KeyboardRemote.cpp  KeyboardRemote.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcUser/LSBreak/: CMakeLists.txt  LSBreak.cpp  LSBreak.h
src/aadcUser/MQSensorStreamer/: CMakeLists.txt  stdafx.h  (+2 more)
(+479 files in other folders)
